# frage

./: .gitignore  Makefile  README  README.md  pyproject.toml  request.dhall
frage/: __main__.py  compiler.py  config.py  http.py  models.py  parser.py
tests/: conftest.py  test__config.py  test__main.py  test_compiler.py  test_http.py  test_models.py  test_parser.py
tests/data/: valid_request.dhall  valid_request_with_headers.dhall  valid_request_with_vars.dhall  valid_request_without_headers.dhall
