[tool.poetry]
name = "frage"
version = "0.2.0"
description = "Make pre-configured requests from the commandline"
authors = ["Elias Tandel <elias.tandel@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://github.com/etandel/frage"
repository = "https://github.com/etandel/frage"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
dhall = "^0.1.7"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-asyncio = "^0.15.1"
pytest-cov = "^2.12.1"
mypy = "^0.910"
black = "^21.8b0"
ipython = "^7.27.0"
aioresponses = "^0.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
frage = 'frage.__main__:run'
